@@ -1,5 +1,15 @@
 2009-11-07  Ivan Maidanski <ivmai@mail.ru>
 
+	* win32_threads.c (THREAD_TABLE_SZ): Change back to a power-of-two
+	const value (for speed).
+	* win32_threads.c (THREAD_TABLE_INDEX): New macro.
+	* win32_threads.c (GC_new_thread, GC_lookup_thread_inner,
+	GC_delete_gc_thread, GC_delete_thread, GC_lookup_pthread): Use
+	THREAD_TABLE_INDEX instead of THREAD_TABLE_SZ.
+	* win32_threads.c (PTHREAD_MAP_HASH): Rename to PTHREAD_MAP_INDEX.
+
+2009-11-07  Ivan Maidanski <ivmai@mail.ru>
+
 	* win32_threads.c (THREAD_TABLE_SZ): Make the const value prime.
 
 2009-11-06  Ivan Maidanski <ivmai@mail.ru>
